Tried rebuilding again

--- a/content/post/2015-07-23-r-rmarkdown.Rmd
+++ b/content/post/2015-07-23-r-rmarkdown.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 # R Markdown
 
-Testing the rebuild
+Testing the rebuild one more time
 
 ```{r cars}
 summary(cars)
